fix: fix back to top button not working on mobile - fix top navbar glitch on mobile

--- a/web/src/components/index.css
+++ b/web/src/components/index.css
@@ -60,9 +60,13 @@ body,
     width: 100%;
     height: 100vh;
     max-height: 100%;
+}
 
-    @media (--md-down) {
-        overflow-y: auto;
+#main {
+    &.active {
+        @media (--md-down) {
+            overflow-y: auto;
+        }
     }
 }
 
